# meine-musik-app

./: .gitignore  Meine-Musik-Testen.bat  README.md  package-lock.json  package.json
.github/workflows/: build.yml
android-extra/: AndroidManifest.additions.xml  NowPlayingPlugin.kt  PlaybackService.kt
scripts/: collect-dist.mjs  dev-server.mjs  make-placeholder-icon.mjs  merge-android-extras.mjs
src/: app.js  backup.js  bgutils.js  downloader.css  downloader.html  downloader.js  hotkeys-native.js  i18n.js  index.html  m3u-export.js  manifest.json  mobile-ui.js  nowplaying-native.js  player.js  potoken-init.js  potoken.js  styles.css  sync.js  tauri-shim.js  themes.js  zoom-fix.js
src-tauri/: Cargo.toml  guest.html  tauri.conf.json
src-tauri/capabilities/: backup.json  default.json  desktop-hotkeys.json  m3u-export.json
src-tauri/src/: backup.rs  commands.rs  cover.rs  discovery.rs  duplicates.rs  health.rs  hotkeys.rs  innertube.rs  lib.rs  lyrics.rs  main.rs  nowplaying.rs  party.rs  playlist.rs  sync.rs  trash.rs
