[package]
name = "meine-musik"
version = "0.1.0"
edition = "2021"

[lib]
name = "meine_musik_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", default-features = false, features = ["rustls-tls"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
id3 = "1"
# default-features=false drops native-tls (-> openssl-sys, which needs a
# per-target OpenSSL cross-build and is what broke aarch64-linux-android).
# rustls-tls is pure Rust, no C toolchain/OpenSSL needed at all - same
# reason tauri-plugin-http above is pinned to it too.
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
percent-encoding = "2.3"
base64 = "0.22"
regex = "1"
rand = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
