[package]
name = "meine-musik"
version = "0.1.0"
edition = "2021"

[lib]
name = "meine_musik_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", default-features = false, features = ["rustls-tls"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
id3 = "1"
# default-features=false drops native-tls (-> openssl-sys, which needs a
# per-target OpenSSL cross-build and is what broke aarch64-linux-android).
# rustls-tls is pure Rust, no C toolchain/OpenSSL needed at all - same
# reason tauri-plugin-http above is pinned to it too.
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
percent-encoding = "2.3"
base64 = "0.22"
regex = "1"
rand = "0.8"
# Real MP3 playing time by walking the audio frames - id3 alone can't (it
# only reads tags). Same job mutagen's audio.info.length did in Flask.
mp3-duration = "0.1"
# Embedded LAN server for party mode / guest page / collaborative queue -
# replaces the Flask server the original guest.html talked to. axum rides
# on the tokio runtime Tauri already uses.
axum = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
# SVG QR code for the guest URL, no image/PNG dependency needed (same
# pure-vector approach as the Flask app's qrcode SvgImage factory).
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
# Cover-Art auf vernuenftige Groesse herunterrechnen statt die oft riesigen
# original YouTube-Thumbnails/ID3-Bilder roh durch jedes list_playlists zu
# schicken (siehe read_track_meta/compressed_cover in commands.rs). Nur
# jpeg+png (Decode) noetig - reine Rust-Codecs, kein System-libjpeg, damit
# unkritisch fuers Android-NDK-Cross-Compile.
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# Komplett-Bibliotheks-Export/Import als ZIP (Backup). "deflate" statt der
# default-Features, damit kein bzip2/zstd-C-Code mitkompiliert wird (siehe
# Cross-Compile-Vorsicht bei den anderen Abhaengigkeiten hier).
zip = { version = "2", default-features = false, features = ["deflate"] }

[features]
custom-protocol = ["tauri/custom-protocol"]

# System-weite Hotkeys (funktionieren auch wenn die App minimiert ist) -
# der Plugin unterstuetzt nur Desktop (keine Tastatur/kein "minimiert" auf
# Android) - als Target-Dependency statt in [dependencies], damit der
# Android-Build den Crate erst gar nicht sieht.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
